--- a/medication-api/src/main/resources/config/application-dev.yml
+++ b/medication-api/src/main/resources/config/application-dev.yml
@@ -37,9 +37,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://medication-mysql:3308/medication?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://medication-mysql:3306/medication?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
-    password: 
+    password: ''
     hikari:
       poolName: Hikari
       auto-commit: false
